<resources>
    <string name="app_name">Delivery&amp;Restaurnt</string>
    <string name="login">Login</string>
    <string name="rotate">0</string>
    <string name="rotate0">180</string>
    <string name="welcome">ًWelcome</string>
    <string name="please_login_or_sign_up_to_continue_using_our_app">please login or sign up to continue using our app</string>
    <string name="email_phonenumber">Email/PhoneNumber</string>
    <string name="please_check_your_email_and_try_again">please check your email and try again.</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="home">Home</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="waiting_order">pending Order</string>
    <string name="delivered">Delivered</string>
    <string name="accepted_order">Accepted Order</string>
    <string name="canceled_order">Canceled Order</string>
    <string name="restaurant">Restaurant</string>
    <string name="driver">Driver</string>
    <string name="order_details">Order Details</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="tax">Tax</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email or Phone</string>
    <string name="login_success">Login Success</string>
    <string name="order">Order</string>
    <string name="no_orders_found">No Orders Found</string>
    <string name="orders">orders</string>
    <string name="dished">dishes</string>
    <string name="le">L.E</string>
    <string name="ordercofirm">order confirmed</string>
    <string name="working_on">Working On</string>
    <string name="ready_for_delivery">ready for delivery</string>
    <string name="on_delivery">On delivery</string>
    <string name="log_out">Log out</string>
    <string name="start_work_on">Start Work on</string>
    <string name="order_canceled">Order Canceled</string>
    <string name="order_delivered">Order Delivered Successfully</string>
    <string name="order_picked">Order Picked Successfully</string>
    <string name="update_password">Update Password</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="new_password">New Password</string>
    <string name="re_type_password">Re_type Password</string>
    <string name="update">Update</string>
    <string name="enter_new_pass">Enter New password</string>
    <string name="enter_retype_pass">Retype password</string>
    <string name="dosent_match">The password does not match the new password</string>
    <string name="update_pass_success">Password Updated Successfully</string>
    <string name="open">openrestaurant</string>
    <string name="close">closerestaurant</string>
    <string name="stayss_changes">Restaurant Status Changed Successfully</string>
    <string name="res_closed">resturant Closed</string>
</resources>