<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.home.homerestaurant.HomeActivity">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/white">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:fontFamily="@font/robotobold"
                    android:textColor="@color/black"
                    />


            </androidx.appcompat.widget.Toolbar>


            <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"

        tools:context=".view.home.homerestaurant.HomeActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        android:background="@drawable/round_button_orange"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/waitingbtn"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/timeleft"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waiting_order"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/robotobold"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3 Order"
            android:textColor="@color/white"
            android:id="@+id/order_count"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/robotobold"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/round_button_darkorange"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/deliveredbtn"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/check"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivered"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/robotobold"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3 Order"
            android:textColor="@color/white"
            android:id="@+id/delivered_count"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/robotobold"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/waitingbtn"
        android:background="@drawable/round_button_gray"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/acceptedbtn"
        android:layout_marginTop="10dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rightarrow"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accepted_order"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/robotobold"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3 Order"
            android:textColor="@color/white"
            android:id="@+id/accpted_count"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/robotobold"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/waitingbtn"
        android:background="@drawable/round_button_darkgray"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/totaldeliveryubtn"
        android:layout_marginTop="10dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wallet"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_revenue"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/robotobold"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3 Order"
            android:textColor="@color/white"
            android:id="@+id/total_delivery_count"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/robotobold"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deliveredbtn"
        android:background="@drawable/round_button_darkgray"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/canceledbtn"
        android:visibility="visible"
        android:layout_marginTop="10dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cancel"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canceled_order"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/robotobold"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3 Order"
            android:textColor="@color/white"
            android:id="@+id/canceled_count"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/robotobold"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toBottomOf="@+id/canceledbtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            android:background="@drawable/round_button_darkorange"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="visible"
            android:id="@+id/workingOnbtn"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/working_on"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/robotobold"
                android:textSize="16sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3 Order"
                android:textColor="@color/white"
                android:id="@+id/order_workOn_count"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/robotobold"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toBottomOf="@+id/canceledbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            android:background="@drawable/round_button_orange"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="visible"
            android:id="@+id/readyForbtn"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ready_for_delivery"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/robotobold"
                android:textSize="16sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3 Order"
                android:textColor="@color/white"
                android:id="@+id/order_readyFor_count"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/robotobold"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/totalstoreubtn"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/round_button_orange"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workingOnbtn">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/wallet"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/robotobold"
                android:text="@string/total_revenue"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/total_store_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/robotobold"
                android:text="3 Order"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/xml_drawer"
            android:id="@+id/drawer"/>

    </androidx.drawerlayout.widget.DrawerLayout>

</androidx.constraintlayout.widget.ConstraintLayout>